--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html>
-     <head>
-	<title>ALYA</title>
-     </head>
-<body>
-<h1>NIK ALYAHUSNA BT NIK HAZARUL HISHAM</h1>
-
-<h2>2020465424</h2>
-
-<h3>D1BA2322B</h3>
-</body>
+<head>
+<center>
+<b><font size="10"
+	 <title>MY PERSONAL BIOGRAPHY
+</title>
+</head>
+</font>
+</b>
 </html>
+
+<p><b><center><font size="5">My Name is Nik Alyahusna bt Nik Hazarul Hisham
+<this is another paragpragh>
+	</p>
+	</center>
+	</font>
+	</b>
+<html>
+<head>
+<body>
+	<center><h4><img src="html/me.jpg"width="20%" height="30%"> 
+		</h4>
+	</center>
